objects/Product_Discount_Lookup__c.object
<CustomObject>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <formula>TEXT(Pricing_Table__r.CurrencyIsoCode)</formula>
        <label>Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <formula>Pricing_Table__r.Range_From__c</formula>
        <label>From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <formula>Pricing_Table__r.List_Price__c</formula>
        <label>List Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Table__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Table</label>
        <referenceTo>Pricing_Table__c</referenceTo>
        <relationshipLabel>Product Discount Lookups</relationshipLabel>
        <relationshipName>Product_Discount_Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Discount Lookups</relationshipLabel>
        <relationshipName>Product_Discount_Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <formula>Pricing_Table__r.Range_To__c</formula>
        <label>To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Discount Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Unique_ID__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Discount Lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Discount Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>